--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -32,9 +32,20 @@
                 <td>{{ room.price }}</td>
             </tr>
             <tr>
+                {% for region in room.regions  %}
+                <th>Region</th>
+                <td>{{ region }}</td>
+                {% endfor %}
+
+            </tr>
+            <tr>
                 <th>Address</th>
                 <td>{{ room.address }}</td>
             </tr>
+            <tr>
+                <th>Image</th>
+                <td><img src="{{ vich_uploader_asset(room, 'imageFile') }}"/></td>
+            </tr> 
         </tbody>
     </table>
 
