--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,7 @@
         Sign in
     </button>
 </form>
+<div style="text-align: center;">
+    <p>if you dont have an account please </p> <a href="{{path('app_register')}}">sign in</a>
+</div>
 {% endblock %}
