--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>The River</title>
+<title>Agvoy</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="The River template project">
@@ -24,22 +24,25 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo"><a href="#">The River</a></div>
-			<div class="ml-auto d-flex flex-row align-items-center justify-content-start">
+			<div class="logo"><a href="#">Agvoy</a></div>
+			<div style="margin-left: unset!important;padding-left: 50px;" class="ml-auto d-flex flex-row align-items-center justify-content-start">
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">About us</a></li>
-						<li><a href="#">Rooms</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="active"><a href="{{path('index')}}">Home</a></li>
+						<li><a href="{{path('about')}}">About us</a></li>
+						<li><a href="{{path('room_index')}}">Rooms</a></li>
+						<li><a href="{{path('blog')}}">Blog</a></li>
+						<li><a href="{{path('contact')}}">Contact</a></li>
+						{% if is_granted('ROLE_ADMIN') %}
+						<li><a href="{{path('dashboard')}}">dashboard</a></li>
+						{% endif %}
+						<li style="padding-left: 570px;" ><a href="{{path('app_login')}}">login</a></li>
+						<li><a href="{{path('app_logout')}}">logout</a></li>
 					</ul>
 				</nav>
-				<div class="book_button"><a href="booking.html">Book Online</a></div>
-				<div class="header_phone d-flex flex-row align-items-center justify-content-center">
-					<img src="images/phone.png" alt="">
-					<span>0183-12345678</span>
-				</div>
+				<!-- <div class="book_button"><a href="booking.html">login</a></div>
+				<div class="book_button"><a href="booking.html">logout</a></div>-->
+				
 
 				<!-- Hamburger Menu -->
 				<div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
@@ -59,16 +62,13 @@
 					<li><a href="#">Rooms</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="{{path('app_login')}}">login</a></li>
+					<li><a href="contact.html">logout</a></li>
+
 				</ul>
 			</nav>
 		</div>
-		<div class="menu_extra">
-			<div class="menu_book text-right"><a href="#">Book online</a></div>
-			<div class="menu_phone d-flex flex-row align-items-center justify-content-center">
-				<img src="images/phone-2.png" alt="">
-				<span>0183-12345678</span>
-			</div>
-		</div>
+
 	</div>
 
 	<!-- Home -->
@@ -78,7 +78,40 @@
 			<div class="owl-carousel owl-theme home_slider">
 				
 				<!-- Slide -->
-				<div class="slide">
+				<div class="slide" >
+					<div class="background_image" style="background-image:url(images/index_1.jpg)"></div>
+					<div class="home_container">
+						<div class="container">
+							<div class="row">
+								<div class="col">
+									<div class="home_content text-center">
+										<div class="home_title">coffee and bed</div>
+										<div class="booking_form_container">
+										
+											 <form action="{{path('searchhandle')}}" method="post" ><input type="search" name="name"></form>
+											 
+
+										<!--<form action="room/{{'id'}}" class="booking_form" method="get">
+												<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
+													<div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Check in" required="required"></div>
+														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Check out" required="required"></div>
+														<div><input type="number" class="booking_input booking_input_b" placeholder="Children" required="required"></div>
+														<div><input type="number" name="id" class="booking_input booking_input_b" placeholder="Room" required="required"></div>
+													</div>
+													<div><button class="booking_button trans_200">Book Now</button></div>
+												</div>
+											</form>-->
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Slide -->
+				<!--<div class="slide">
 					<div class="background_image" style="background-image:url(images/index_1.jpg)"></div>
 					<div class="home_container">
 						<div class="container">
@@ -105,38 +138,9 @@
 						</div>
 					</div>
 				</div>
-
+			-->
 				<!-- Slide -->
-				<div class="slide">
-					<div class="background_image" style="background-image:url(images/index_1.jpg)"></div>
-					<div class="home_container">
-						<div class="container">
-							<div class="row">
-								<div class="col">
-									<div class="home_content text-center">
-										<div class="home_title">A Luxury Stay</div>
-										<div class="booking_form_container">
-											<form action="#" class="booking_form">
-												<div class="d-flex flex-xl-row flex-column align-items-start justify-content-start">
-													<div class="booking_input_container d-flex flex-lg-row flex-column align-items-start justify-content-start">
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_in" placeholder="Check in" required="required"></div>
-														<div><input type="text" class="datepicker booking_input booking_input_a booking_out" placeholder="Check out" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Children" required="required"></div>
-														<div><input type="number" class="booking_input booking_input_b" placeholder="Room" required="required"></div>
-													</div>
-													<div><button class="booking_button trans_200">Book Now</button></div>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Slide -->
-				<div class="slide">
+				<!--<div class="slide">
 					<div class="background_image" style="background-image:url(images/index_1.jpg)"></div>
 					<div class="home_container">
 						<div class="container">
@@ -165,9 +169,9 @@
 				</div>
 
 			</div>
-			
+		-->
 			<!-- Home Slider Dots -->
-			<div class="home_slider_dots_container">
+		<!--	<div class="home_slider_dots_container">
 				<div class="home_slider_dots">
 					<ul id="home_slider_custom_dots" class="home_slider_custom_dots d-flex flex-row align-items-start justify-content-start">
 						<li class="home_slider_custom_dot active">01.</li>
@@ -175,7 +179,7 @@
 						<li class="home_slider_custom_dot">03.</li>
 					</ul>
 				</div>
-			</div>
+			</div>-->	
 			
 		</div>
 	</div>
