--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -5,8 +5,8 @@
 
 {% block body %}
 
-{{ include('test.html.twig') }}
-    <h1>Room index</h1>
+
+   <!-- <h1>Room index</h1>
 
     <table class="table">
         <thead>
@@ -45,4 +45,50 @@
     </table>
 
     <a href="{{ path('room_new') }}">Create new</a>
+-->
+    
+   
+    <head>  <link rel="stylesheet" href="/room.css"></head>
+    <body>
+        <div class="hero-container">
+            {% for room in rooms %}
+          <div class="main-container">
+           
+            <div class="poster-container">
+              <a href="{{ path('room_show', {'id': room.id}) }}"><img  src="{{ vich_uploader_asset(room, 'imageFile') }}" class="poster" /></a>
+            </div>
+            <div class="ticket-container">
+              <div class="ticket__content">
+                <h4 class="ticket__movie-title">{{ room.summary }}</h4>
+                <p class="ticket__movie-slogan">
+                  More human than human is our motto.
+                </p>
+                <p class="ticket__current-price">$28.00</p>
+                <p class="ticket__old-price">$44.99</p>
+                <a href="{{path('reservation_new', {'id': room.id})}}" class="btn btn_success ticket__buy-btn">Book now</a>
+              </div>
+            </div>
+          </div>
+          {% else %}
+          <tr>
+              <td colspan="8">no records found</td>
+          </tr>
+      {% endfor %}
+        <!--  <div class="main-container">
+            <div class="poster-container">
+              <a href="#"><img src="https://i.ibb.co/Zd51z5c/justice-league.jpg" class="poster" /></a>
+            </div>
+            <div class="ticket-container">
+              <div class="ticket__content">
+                <h4 class="ticket__movie-title">Justice League</h4>
+                <p class="ticket__movie-slogan">You can't save the world alone.</p>
+                <p class="ticket__current-price">$20.75</p>
+                <p class="ticket__old-price">$40.99</p>
+                <button class="ticket__buy-btn">Buy now</button>
+              </div>
+            </div>
+          </div>-->
+        </div>
+        <a href="{{ path('room_new') }}">Create new</a>
+      </body>
 {% endblock %}
