--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -5,7 +5,22 @@
 
 {% block body %}
 
-
+{% block alerts %}
+{% for type, messages in app.session.flashBag.all %}
+  {% for message in messages %}
+      {%if type == 'error'%} {% set type = 'danger' %} {%endif%}
+      {%if type == 'message'%} {% set type = 'info' %} {%endif%}
+      {# Bootstrap alert, see http://getbootstrap.com/components/#alerts #}
+      <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
+          <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              <span class="sr-only">Close</span>
+          </button>
+          <p>{{ message|raw }}</p>
+      </div>
+  {% endfor %}
+{% endfor %}
+{% endblock %} 
    <!-- <h1>Room index</h1>
 
     <table class="table">
@@ -91,4 +106,5 @@
         </div>
         <a href="{{ path('room_new') }}">Create new</a>
       </body>
+
 {% endblock %}
